--- a/app/src/main/res/layout/fragment_orgo_home.xml
+++ b/app/src/main/res/layout/fragment_orgo_home.xml
@@ -28,15 +28,17 @@
                 android:textAlignment="center"
                 android:id="@+id/fragOrgoHomeEventNameHolder"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
+
             <TextView
+                android:id="@+id/timerOrganizing"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
                 android:layout_marginTop="10dp"
-                android:textStyle="bold"
-                android:textSize="30sp"
+                android:text="Loading"
+                android:textAlignment="center"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:text="Loading" />
+                android:textSize="30sp"
+                android:textStyle="bold" />
             <View
                 android:layout_width="match_parent"
                 android:layout_marginTop="10dp"
